[tool.poetry]
name = "geodjango-app"
version = "0.1.0"
description = ""
authors = ["buchmayne <michaelmbuchman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.2"
black = "^20.8b1"
flake8 = "^3.8.4"
django-environ = "^0.4.5"
psycopg2-binary = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
